third_party/move/move-compiler-v2/tests/acquires-checker/v1-borrow-tests/borrow_global_acquires_extraneous_annotation.exp

Diagnostics:
error: unnecessary acquires annotation
  ┌─ tests/acquires-checker/v1-borrow-tests/borrow_global_acquires_extraneous_annotation.move:4:32
  │
4 │     public fun test() acquires T1 {
  │                                ^^^
